Fix for overflowing content preventing edit and deletion in admin panel (#891)
* Closes #876
* Fixes overflowing admin panel content by adding the `.text-break` CSS class.
    * This is .text-break cloned from Bootstrap 4.3 with a fix for browsers not supporting break-word. It will be removed from the main CTFd classes when Bootstrap is upgraded internally.

--- a/CTFd/themes/admin/static/css/base.css
+++ b/CTFd/themes/admin/static/css/base.css
@@ -182,3 +182,10 @@ pre {
     -moz-border-radius: 0 !important;
     border-radius: 0 !important;
 }
+
+.text-break {
+    /* TODO: This is .text-break cloned from Bootstrap 4.3 with a fix for browsers not supporting break-word. Remove later. */
+    word-break: break-all !important;
+    word-break: break-word !important;
+    overflow-wrap: break-word !important;
+}
